<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.dis.analisisnumerico.one_variable_equation.activity_class.SecantActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/expText"
            android:layout_width="269dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/fx"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="41dp" />

        <EditText
            android:id="@+id/iterText"
            android:layout_width="271dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/iter"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="90dp" />

        <EditText
            android:id="@+id/tolText"
            android:layout_width="271dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/tol"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="132dp" />

        <EditText
            android:id="@+id/infText"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/xi"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="172dp" />

        <EditText
            android:id="@+id/supText"
            android:layout_width="271dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/xs"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="220dp" />

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="274dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="onCalculateClick"
            android:text="Calcular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/resultText"
            android:layout_width="291dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="332dp"
            android:textSize="12dp"
            android:ems="10"
            android:hint="@string/res"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="391dp"
            android:layout_marginStart="11dp">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/picture_frame"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:stretchColumns="*"
                android:layout_marginStart="11dp">


                <TableRow
                    android:id="@+id/tableRow1"
                    android:background="@android:color/holo_blue_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/n"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVie3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/x0T"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVi3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/y0T"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/x1T"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/y1T"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/error"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/helpBtn"
            android:layout_width="49dp"
            android:layout_height="40dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:background="@android:drawable/ic_menu_help"
            android:onClick="onHelpClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bisText"
            android:layout_width="204dp"
            android:layout_height="36dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="Secante"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
